# veritable_lasagna

./: .clang-format  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  VLasagnaConfig.cmake.in  conanfile.py  install.sh  vcpkg.json
.github/workflows/: build_and_test.yml
cmake/: ComponentHelper.cmake  InstallHooks.cmake  PrimitiveTypes.cmake  SIMD.cmake  VersionBump.cmake
cmake/hooks/: pre-commit  pre-push
docs/: Doxyfile  mainpage.md
docs/manual/: 1_introduction.md  2_getting_started.md  3_memory.md  4_datastructures.md  5_concurrency.md  6_advanced.md  7_utilities.md  convention.dox  examples.dox  index.dox  index.md  memory.dox  structures.dox  testing.dox
include/: vlasagna.h
include/core/: vlasagna.h
include/core/vl/: vl_algo.h  vl_ansi_term.h  vl_arena.h  vl_async_pool.h  vl_async_queue.h  vl_atomic.h  vl_atomic_ptr.h  vl_buffer.h  vl_compare.h  vl_condition.h  vl_deque.h  vl_dynlib.h  vl_filesys.h  vl_half.h  vl_hash.h  vl_hashtable.h  vl_linked_list.h  vl_log.h  vl_memory.h  vl_msgpack.h  vl_msgpack_io.h  vl_mutex.h  vl_nibble.h  vl_numtypes.h  vl_pool.h  vl_queue.h  vl_rand.h  vl_semaphore.h  vl_set.h  vl_simd.h  vl_socket.h  vl_srwlock.h  vl_stack.h  vl_stream.h  vl_stream_filesys.h  vl_stream_memory.h  vl_thread.h  vl_thread_pool.h
include/vl/: vl_arena.h  vl_async_pool.h  vl_async_queue.h  vl_atomic.h  vl_atomic_ptr.h  vl_bson.h  vl_buffer.h  vl_compare.h  vl_condition.h  vl_deque.h  vl_dynlib.h  vl_fixed_pool.h  vl_hash.h  vl_hashtable.h  vl_linear_pool.h  vl_linked_list.h  vl_memory.h  vl_msgpack.h  vl_msgpack_io.h  vl_mutex.h  vl_numtypes.h  vl_pool.h  vl_queue.h  vl_rand.h  vl_semaphore.h  vl_set.h  vl_srwlock.h  vl_stack.h  vl_thread.h
src/: CMakeLists.txt  vl_arena.c  vl_async_pool.c  vl_async_queue.c  vl_atomic_ptr.c  vl_buffer.c  vl_compare.c  vl_condition.c  vl_condition_pthread.c  vl_deque.c  vl_dynlib.c  vl_fixed_pool.c  vl_hash.c  vl_hashtable.c  vl_libconfig.h.in  vl_linear_pool.c  vl_linked_list.c  vl_memory.c  vl_msgpack.c  vl_msgpack_io.c  vl_mutex.c  vl_mutex_pthread.c  vl_mutex_win32.c  vl_pool.c  vl_queue.c  vl_rand.c  vl_semaphore.c  vl_set.c  vl_srwlock.c  vl_stack.c  vl_thread.c  vl_thread_pthread.c  vl_thread_win32.c
src/core/: CMakeLists.txt  vl_algo.c  vl_arena.c  vl_async_pool.c  vl_async_queue.c  vl_atomic_ptr.c  vl_buffer.c  vl_compare.c  vl_condition.c  vl_deque.c  vl_dynlib.c  vl_filesys.c  vl_hash.c  vl_hashtable.c  vl_libconfig.h.in  vl_linked_list.c  vl_log.c  vl_memory.c  vl_msgpack.c  vl_msgpack_io.c  vl_mutex.c  vl_numtypes.c  vl_pool.c  vl_queue.c  vl_rand.c  vl_semaphore.c  vl_set.c  vl_simd.c  vl_socket.c  vl_srwlock.c  vl_stack.c  vl_stream.c  vl_stream_filesys.c  vl_stream_memory.c  vl_thread.c  vl_thread_pool.c
src/core/platform/: vl_simd_avx2.c  vl_simd_neon.c  vl_simd_neon64.c  vl_simd_portable.c  vl_simd_sse2.c
src/core/platform/posix/: vl_condition_pthread.c  vl_dynlib_posix.c  vl_filesys_posix.c  vl_mutex_pthread.c  vl_semaphore_pthread.c  vl_socket_posix.c  vl_srwlock_pthread.c  vl_thread_pthread.c
src/core/platform/win32/: vl_condition_win32.c  vl_dynlib_win32.c  vl_filesys_win32.c  vl_mutex_win32.c  vl_semaphore_win32.c  vl_socket_win32.c  vl_srwlock_win32.c  vl_thread_win32.c
src/platform/posix/: vl_condition_pthread.c  vl_dynlib_posix.c  vl_mutex_pthread.c  vl_semaphore_pthread.c  vl_srwlock_pthread.c  vl_thread_pthread.c
src/platform/win32/: vl_condition_win32.c  vl_dynlib_win32.c  vl_mutex_win32.c  vl_semaphore_win32.c  vl_srwlock_win32.c  vl_thread_win32.c
test/: CMakeLists.txt  arena.cpp  async_pool.cpp  async_queue.cpp  atomic.cpp  buffer.cpp  fixedpool.cpp  hashtable.cpp  linearpool.cpp  linked_list.cpp  memory.cpp  msgpack.cpp  pool.cpp  queue.cpp  random.cpp  set.cpp  stack.cpp
test/core/: algo.cpp  arena.cpp  async_queue.cpp  buffer.cpp  filesys.cpp  hashtable.cpp  linked_list.cpp  log.cpp  memory.cpp  msgpack.cpp  pool.cpp  queue.cpp  random.cpp  set.cpp  socket.cpp  stack.cpp
test/core/linked/: algo.c  algo.h  arena.c  arena.h  async_pool.c  async_pool.h  async_queue.c  async_queue.h  atomic.c  atomic.h  buffer.c  buffer.h  filesys.c  filesys.h  hashtable.c  hashtable.h  linked_list.c  linked_list.h  log.c  log.h  memory.c  memory.h  msgpack.c  msgpack.h  pool.c  pool.h  queue.c  queue.h  random.c  random.h  set.c  set.h  socket.c  socket.h  stack.c  stack.h
test/linked/: async_pool.c  async_pool.h  async_queue.c  async_queue.h  atomic.c  atomic.h
test/package/: CMakeLists.txt  conanfile.py  test_package.c
vcpkg/veritable-lasagna/: portfile.cmake  vcpkg.json
